# reactos

./: CMakeLists.txt  CODEOWNERS  compile_list.txt  git_add_cmakelists.txt  out.txt
base/: CMakeLists.txt
base/applications/calc/: CMakeLists.txt  calc.h  fun_ieee.c  fun_mpfr.c  rpn_ieee.c  rpn_mpfr.c  winmain.c
base/applications/charmap/: map.c
base/applications/charmap_new/: CMakeLists.txt
base/applications/drwtsn32/: CMakeLists.txt
base/applications/extrac32/: CMakeLists.txt
base/applications/iexplore/: CMakeLists.txt
base/applications/mspaint/: CMakeLists.txt
base/applications/rapps/: CMakeLists.txt  appview.cpp  available.cpp  gui.cpp  installed.cpp  loaddlg.cpp  unattended.cpp
base/applications/rapps_com/: CMakeLists.txt
base/applications/regedit/: CMakeLists.txt
base/applications/runas/: CMakeLists.txt
base/applications/sdbinst/: CMakeLists.txt
base/applications/utilman/: CMakeLists.txt  dialog.c  process.c
base/applications/winhlp32/: CMakeLists.txt
base/applications/wordpad/: CMakeLists.txt
base/setup/: CMakeLists.txt
base/setup/lib/: CMakeLists.txt  arcname.c  bldrsup.c  bootsup.c  bootsup.h  filesup.c  filesup.h  fsutil.c  fsutil.h  install.c  install.h  mui.c  muifonts.h  osdetect.c  partlist.h  registry.c  registry.h  settings.c  settings.h  setuplib.c  setuplib.h  setuplib.spec
base/setup/reactos/: CMakeLists.txt  drivepage.c  reactos.c  reactos.h  reactos.rc  resource.h  treelist.c  treelist.h
base/setup/usetup/: CMakeLists.txt  bootsup.c  chkdsk.c  chkdsk.h  console.c  consup.c  consup.h  filequeue.c  filesup.c  filesup.h  format.c  format.h  inffile.c  inffile.h  keytrans.c  keytrans.h  mui.h  partlist.c  partlist.h  registry.c  usetup.c  usetup.h
base/setup/welcome/: CMakeLists.txt
base/shell/cmd/: CMakeLists.txt  alias.c  assoc.c  beep.c  call.c  choice.c  cls.c  cmd.c  cmd.h  cmdinput.c  cmdinput.h  cmdtable.c  color.c  config.h  console.c  console.h  copy.c  ctty.c  date.c  del.c  delay.c  dir.c  dirstack.c  echo.c  error.c  filecomp.c  for.c  free.c  history.c  if.c  internal.c  memory.c  misc.c  mklink.c  move.c  msgbox.c  parser.c  path.c  pause.c  precomp.h  (+19 more)
base/shell/explorer/: CMakeLists.txt  traywnd.cpp
base/shell/rshell/: CMakeLists.txt
base/system/: CMakeLists.txt
base/system/autochk/: autochk.c
base/system/services/: database.c  rpcserver.c  services.h
base/system/smss/: CMakeLists.txt  smloop.c  smsbapi.c  smsessn.c  smss.c  smss.h  smsubsys.c  smutil.c
base/system/winlogon/: gui.c  sas.c  tui.c  winlogon.c  winlogon.h
boot/: CMakeLists.txt
boot/armllb/inc/: hw.h  osloader.h
boot/armllb/os/: loader.c
boot/bootdata/: CMakeLists.txt  bootcd.ini  caroots.inf  floppy_pc98.ini  hivebcd.inf  hivecls.inf  hivedef.inf  hiveinst.inf  hivesft.inf  hivesys.inf  hybridcd.ini  livecd.inf  livecd.ini  readme.txt  setupreg.inf  txtsetup.sif  txtsetup_sourcedisksfiles.ods
boot/freeldr/: CMakeLists.txt  FREELDR.INI
boot/freeldr/bootsect/: CMakeLists.txt
boot/freeldr/freeldr/: CHANGELOG  CMakeLists.txt  arcname.c  (+19 more)
boot/rtl/: blrtl.cmake
dll/: CMakeLists.txt
dll/keyboard/: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/base/: CMakeLists.txt
drivers/base/bootvid/: precomp.h
drivers/base/bootvid/framebuf/: bootvid.c  framebuf.h
drivers/base/hdlsterm/: CMakeLists.txt  hdlsterm.c  hdlsterm.h  hdlsterm.rc
drivers/base/kdcom/: CMakeLists.txt  kdcom.c  kddll.c  kddll.h  kdserial.c
drivers/base/kdgdb/: CMakeLists.txt  kdcom.c
drivers/base/kdrosdbg/: CMakeLists.txt
drivers/base/kdtee/: CMakeLists.txt  kdtee.c  kdtee.rc
drivers/base/kdvm/: CMakeLists.txt  kdvm.c  kdvm.h
drivers/base/ntcondd/: CMakeLists.txt  font.c  headless.c  inbv.c  ntcondd.c  ntcondd.h  ntcondd.rc
drivers/filesystems/: CMakeLists.txt
drivers/filesystems/fastfatx/: CMakeLists.txt  cleanup.c  create.c  dir.c  direntry.c  dirwr.c  fastfatx.rc  fat.c  fcb.c  finfo.c  fsctl.c  iface.c  kdbg.c  rw.c  vfat.h  volume.c
drivers/storage/class/ramdisk/: CMakeLists.txt  ramdisk.c
hal/: hal.spec
hal/halarm/: CMakeLists.txt
hal/halx86/: CMakeLists.txt
media/doc/: 3rd Party Files.txt
modules/: CMakeLists.txt
modules/rosapps/applications/ramdiskctl/: CMakeLists.txt  ramdiskctl.c
modules/rosapps/applications/vhddump/: CMakeLists.txt  utils.c  vhddump.c  vhddump.h  vhdsupp.c  virtdisk.c  virtdisk_driver.c  virtdisk_driver.h
ntoskrnl/: CMakeLists.txt  ntos.cmake
ntoskrnl/cc/: copy.c
ntoskrnl/config/: cmboot.c  cmcontrl.c  cmdata.c  cminit.c  cmlazy.c
ntoskrnl/ex/: dbgctrl.c  hdlsterm.c  init.c  sysinfo.c
ntoskrnl/fstub/: disksup.c
ntoskrnl/inbv/: bootanim.c  bootanim.rc  btani2k.c  btani2k.rc  btani2k3.c  btani2k3.rc  btanihlp.c  btanint4.c  inbv.c  inbv____mine.c  inbv_boot_themes.h  inbvport.c  logo.h
ntoskrnl/include/: ntoskrnl.h
ntoskrnl/io/: pnpio.h
ntoskrnl/kd/: CMakeLists.txt  kd.h  kdio.c  kdmain.c  kdport.c  kdprompt.c  kdps2kbd.c  kdserial.c  kdterm.rc  kdterm.spec  kdterminal.c  kdterminal.h
ntoskrnl/kd/arm/: kdserial.c
ntoskrnl/kd/i386/: kdbg.c  kdserial.c
ntoskrnl/kd64/: kdapi.c  kddata.c  kdinit.c
ntoskrnl/kdbg/: kdb.c  kdb.h  kdb_cli.c  kdb_cmdhist.c  kdb_print.c  kdb_public.h  kdb_serial.c  kdb_symbols.c  kdbg.c
ntoskrnl/ke/: beep.h  bug.c  mp.c  spinlock.c  thrdschd.c
ntoskrnl/po/: poshtdwn.c
ntoskrnl/ps/: psmgr.c
ntoskrnl/vdm/: vdmmain.c
sdk/cmake/: CMakeMacros.cmake  gcc.cmake  init-section-merged.lds  msvc.cmake  writing_CmakeLists_for_ReactOS.txt
sdk/lib/: CMakeLists.txt
sdk/tools/: pefixup.c
subsystems/mvdm/ntvdm/: CMakeLists.txt  dos.cmake  dos.spec  emulator.c  emulator.h  memory.c  memory.h  ntvdm.c  ntvdm.h  ntvdm.spec
subsystems/mvdm/ntvdm/bios/: rom.c  vidbios.c
subsystems/mvdm/ntvdm/bios/bios32/: bios32.c  dskbios32.c  moubios32.c
subsystems/mvdm/ntvdm/console/: video.c
subsystems/mvdm/ntvdm/cpu/: cpu.c
subsystems/mvdm/ntvdm/dos/: dem.c  mouse32.c
subsystems/mvdm/ntvdm/dos/dos32krnl/: bios.c  dos.c  himem.h  process.c
subsystems/mvdm/ntvdm/hardware/: cmos.c
win32ss/: CMakeLists.txt
win32ss/include/: ntgdihdl.h  ntuser.h
(+943 files in other folders)
